Draft implementation JSON DAO for Registrations
