# dao/postgres/entities/pg-registrations.js
@@ -16,7 +16,7 @@ pgRegistrations.getByPoolAndUser = (poolId, userId, callback) => {
     return callback(utils.makeError(500, 'Not implemented'));
 };
 
-pgRegistrations.getByPoolAndNamespace = (poolId, namespace, offset, limit, callback) => {
+pgRegistrations.getByPoolAndNamespace = (poolId, namespace, nameFilter, offset, limit, callback) => {
     return callback(utils.makeError(500, 'Not implemented'));
 };
 
